# tour-de-france-challenge

./: .gitignore  CONTRIBUTING.md  README.md  matrix.json  pyproject.toml
.github/workflows/: fetch-and-score.yml  score-and-publish.yml  validate-pr.yml
data/: README.md  data.csv  latest_score_meta.json  next_stage.csv  stage_catalog.json  test.csv
scripts/: check_skore_usage.py  discover_day_prs.py  fetch_tdf_data.py  run_submission.py
submissions/_skeleton/: submission.py
submissions/glemaitre/: requirements.txt  rider_history.csv  submission.py
submissions/jeanclawd/: submission.py
submissions/louiscrc/: requirements.txt  submission.py
submissions/sanjaradylov/: submission.py
submissions/tjburch/: requirements.txt  submission.py
submissions/yanndebray/: requirements.txt  submission.py
tests/: test_harness.py
